--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,12 @@ body {
   * {
     @apply border-border;
   }
+
+  html {
+    @apply h-full;
+  }
+
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
 }
